--- a/sections/Anhang.tex
+++ b/sections/Anhang.tex
@@ -1,338 +1,7 @@
 \section{Interviewtranskripte}
 
-\subsection{Interview mit Christoph Rahles}
-Interviewpartner: Christoph Rahles (R) \\
-Interviewee: Edgar Muss (E) \\
-Datum: 18. Juni 2020 um 18 Uhr \\
-Medium: Zoom
+\input{sections/Anhang/rahles}
 
-Interviewt wurde Christoph Rahles, weiterführend als R gekennzeichnet. Interviewt hat Edgar Muss, weiterführend als E gekennzeichnet.
+\input{sections/Anhang/troppman}
 
-E: Chris, darf ich dich aufnehmen und die Inhalte im Rahmen der Bachelorarbeit veröffentlichen?
-
-R: Darfst du.
-
-E: Dann würde ich gerne das Interview mit der ersten Frage starten.
-
-E: Haben Sie das Gefühl, dass es Bedingungen gibt, die PluralPolit erfüllen sollte, bevor es Ihre Softwarearchitektur zu einer Microservicearchitektur umstellt?
-
-R: Ja.
-
-E: Welche Bedingungen empfindest du als wichtig?
-
-R: Zwei Dimensionen. Die eine Dimension ist ganz klar das Alter der Firma bzw. damit einher gehen der Reifegrad des Geschäftsmodells. Wie grundlegend sind Iteration zu erwarten, in Form von Softwarearchitektonischen Änderungen, was das Geschäftsmodell angeht oder wie man sie abbildet. Das ist der eine Punkt und auf der anderen Seite immer auch die Frage: Microservicearchitektur eröffnet ein Flexibilität, aber eben auch im gleichen Maß Komplexität. Das heißt es muss  jemanden geben, der die Verbindungen zwischen den Anwendungen beherrscht, monitort, administriert und aufsetzt und sich die Frage stellt: Ist es wirtschaftlich, Ja oder Nein?
-
-R: Deswegen würde ich im Moment Nein sagen. Denn gerade im Fall eines jungen Unternehmens sollte man das Ziel haben, eine hohe Iterationsgeschwindigkeit zu besitzen, anstatt eine ausgeklügelten Architektur. Was jedoch nicht heißt, dass man die Qualität des Codes an sich vernachlässigen sollte.
-
-E: Okay es wurde viel vorgegriffen. Was völlig okay ist. Vielleicht springen wir einmal zur Frage vier, da vieles was du bereits gesagt hast, darauf angespielt.
-
-E: Ein Startup zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meinst du, dass trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?
-
-E: Teilweise hast du es schon beantwortet. Was ich vielleicht noch genauer wissen möchte, bezieht sich auf die Iteration. Wann sollte sich ein Start-up mit Microservices auseinandersetzen? Also wann wäre denn der Zeitpunkt? Gibt es ein richtigen Zeitpunkt? 
-
-R: Deswegen habe ich am Anfang gesagt, dass es zwei Dimensionen gibt, die man betrachten muss, die auch zu unterschiedlichen Zeitpunkten auftreten.
-
-R: Wann sollte man es im Blick haben? Um vielleicht die Frage zu beantworten.
-
-R: Da gibt es, glaube ich kein Richtig und Falsch. Man sollte sich immer die Fragen stellen: Aus einer rein technologisch, wirtschaftlich Perspektive macht es im Moment Sinn, ein Microservice auszugliedern? Weil das ist es im Moment.
-Meistens ist es so, dass man mit einem Monolithen anfängt und irgendwann an ein Punkt kommt, wo es entweder sehr drückend wird oder wo man sagt: “Es macht Sinn Dinge auszulagern”.
-
-R: Dann muss man sich die Frage stellen macht es Sinn und habe ich die Men-Power bzw. das Knowhow, um diese Komplexität zu verwalten. Was nicht heißt, dass ich das Wissen im Haus haben muss. Ich kann mir genauso gut Dienstleister suchen, die mich beim Aufbau der Infrastruktur unterstützt. Aber da ist eben immer die Frage: Kann ich auf das Knowhow zurückgreifen? Weil das ist meine Erfahrung nach, der größte Tod den Unternehmen sterben, die zu schnell sagen: “Ich musste in Microservices rein” und die an ihrer Infrastruktur und der Komplexität der Architektur zu viel Zeit verlieren und im Gegensatz zu einem Mitbewerber nicht so schnell iterieren können. 
-
-E: Okay, also gibt es keinen festen Zeitpunkt und es ist eher eine Entscheidung aus der Expertise des CTO?
-
-R: Ja, ich würde gar nicht sagen, dass es zwingend von der Expertise des CTO abhängt. Dazu gehörte auch die Strategie der Firma, sowie die Ausrichtung der Produkte und folgende Fragen: 
-Welche Ziele hat das Unternehmen? Welche Ziele hat zum Beispiel der Sales-Bereich? Möchte dieser in neue Märkte expandieren, heißt das unter Umständen, dass es mit unterschiedlichen Skalierungseffekten rechnen muss.
-
-R: Also wir haben unterschiedliche Lastszenarien für einen Teil der Applikation, sagen wir mal Deutschland, versus Indien zum Beispiel. Oder gibt es, auch wieder am selben Beispiel genommen, Latenzprobleme, die auftreten da man sagt: “Alles wird an einer Stelle gespeichert.” Dann habe ich das Problem, dass für den indischen Kunden nicht mehr in der richtigen Geschwindigkeit bereitgestellt wird. Oder wenn ich die Applikation nach Indien Verlage, dass es für den deutschen Kunden nicht mehr richtig dargestellt wird. Gerade solche Probleme kann man natürlich durch Microservices lösen, aber es ist immer im gesamt Kontext der Firma zu sehen. Natürlich ist der CTO dabei eine treibend Kraft. Es ist die Person mit der Expertise, aber es steht und fällt immer mit der Ausrichtung des Geschäfts bzw. mit dem Rest Unternehmens. So macht es keinen Sinn, wenn ich jetzt sage, ich fange an, irgendwelche Komponenten raus zu brechen, wenn absehbar ist, dass am Ende des Jahres auf diesen Part kein Fokus mehr gelegt wird.
-
-R: So beispielsweise wenn ich jetzt eine Komponente der Anwendung auf Konsumenten auslege, und es absehbar ist, dass ab nächstem Jahr sich hauptsächlich auf Unternehmenskunden konzentriert wird. Dann würde ich nicht sagen, dass das eine sinnvolle Entscheidung ist. Auch wenn es aus dem rein architektonischen Ansatz Sinn ergibt.
-
-E: Ja, da gehe ich absolut mit. Weil du einmal die Unabhängigkeit von Teams angesprochen hast würde ich gerne auf Frage zwei eingehen.
-
-E: Microservices ermöglichen es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten kann?
-
-R: Gute Frage, ich wäre da ein bisschen vorsichtig. Unabhängig voneinander arbeiten, Ja. Unterschiedlich, ich würde es eher sagen in unterschiedlich schnellen Iterationsschritten. Auch diese Teams gehören zu einem Unternehmen. Diese Teams tragen zu einem Gesamtunternehmen bei, das heißt unabhängig voneinander sind sie nie.
-Also ja, es kann sein, dass ein Service mal nicht mit einem anderen Microservice redet, aber in der Regel ist das ja das große Feature von Microservices, dass ich Microservices über definierte Schnittstellen miteinander verbinden kann.
-
-R: Welche Rahmenbedingungen notwendig sind? Also die Teams müssen auf der einen Seite so interdisziplinär aufgestellt sein, dass sie wirklich unabhängig voneinander arbeiten können. Einfach skill technisch. Ich brauche jemanden, der sich um Infrastruktur, Softwareentwicklung und Qualität kümmern kann.
-
-R: Ich denke, es macht nur dann Sinn, wenn Microservices einen ganz klaren eigenen Fokus haben, Das heißt wenn die Schnittstelle oder die Schnittmenge zwischen den Microservices in der Regel sehr klein ist. Das heißt, jeder kann in seinem Microservice Entscheidungen und Aussagen treffen, ohne abhängig von anderen Person zu sein.
-
-R: Also für diese Business Domänen natürlich. 
-
-E: Ja.
-
-R: Also wenn ich mit Daten aus anderen Microservices arbeite, ist es natürlich klar, dass ich eine Schnittstelle von dem anderen Team brauche, durch welche ich mir die entsprechenden Daten hier hole. Aber innerhalb meiner Business Domäne, muss ich der Owner sein, ohne Abhängigkeit zu einem anderen Team zu haben.
-
-E: Okay, wie wertes du, dass Teams eigene Entscheidungen treffen können?
-
-R: Das Team muss Owner von dieser Business Domänen sein, sonst macht es keinen Sinn.
-
-R: Wie der Entscheidungsfindungsprozess ist, ist sehr unterschiedlich und hat mit der Softwareentwicklung eigentlichen wenig zu tun. Es gibt Teams, die funktionieren hervorragend mit Wasserfallplanung. Es gibt Teams, die funktionieren hervorragend agile. Es gibt Teams, die funktionieren hervorragend mit irgendwas dazwischen und es gibt genauso viele Teams, die scheitern bei jeder dieser Arten.
-
-R: Das ist glaube ich einfach sinnvoll zu gucken, dass die Firmen bzw. die Teams entsprechend des Projektmanagements richtig aufgestellt ist. Was heißt natürlich, dass sie über ihre Domäne selber entscheiden. Ob das aber das Team aus Softwareentwicklern selbst ist, oder ob es ein  Produktowner an die Seite gestellt bekommen, ist glaube ich eine Sache der Aufstellung und irrelevant für die Architektur.
-
-R: Also man kann das genauso gut in den Sand setzen, wenn ein Team mit einem Monolithen  fremdbestimmt durch andere Business Owner arbeit. Das kann bei einem Monolithen genauso schief gehen wie bei Microservices.
-
-E: Du hattest einmal eine technische Anforderung mit angerissen. Da würde ich jetzt in Frage Drei gerne detaillierter eingehen wollen. 
-
-E: Gibt es in deinen Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte, bevor es die Softwarearchitektur von einer monolithen Architektur zu einer Microservicearchitektur umstellt? 
-
-R: Auf der rein technischen Ebene würde ich die heutzutage geltende Best Practices als Anforderung sehen. Es sollten immer automatische Tests, sowie ein automatischer Integration- und Deployment-Prozess vorhanden sein und funktionieren. Des Weiteren sollte hinten raus ein vernünftiges Monitoring gegeben sein.
-
-R: Man kann so weit gehen, dass es ein separates infrastruktur Team gibt, welches wiederum von Unternehmen abhängt. Je nachdem würde ich dann dazu raten, dass es ein automatisches Konfigurationsmanagement gibt. Das heißt, dass ich automatisch Infrastruktur ausrollen, bzw. ändern und replizieren kann.
-
-R: Also ich denke die technischen Anforderungen sind, dass das was man in IT schon immer gesagt hat:  “Automatisierung, Automatisierung, Automatisierung.”
-
-R: Das heißt je mehr unabhängige skalierung ich vornehmen möchte, desto mehr brauche ich eine Dokumentation in Programmcode: In automatisierten Prozessen, die das ermöglichen.
-Weil sonst verliert man eben wieder diese ganze Zeit beim Ausetzten des Systems, beim finden von Fehler, beim mündlichen Weitergaben von irgendwelchen Besonderheiten. 
-
-R: Monitoring ist das A und O. Das heißt mit Anstieg der Komplexität, muss ich sicher sein, dass ich auch diese Komplexität hinreichend überblicken kann.
-
-E: Ja, okay. Sind deiner Meinung nach innerhalb einer Microservicearchitektur Sicherheit und Datengeschwindigkeit besonders wichtig?
-
-R: Sicherheit gehört für mich zu den Grundvoraussetzungen. Egal über welche Architektur wir reden. Das ist auch wieder eine Sache, die hat für mich nichts mit Architektur zu tun. Ich möchte  die Infrastruktur eines Monolithen genauso sicher haben wie bei meinem Microservices. 
-
-R: Davon losgelöst wenn man darüber nachdenkt, dass es vielleicht mehr als ein und hat zwei Anwendungen erstellt werden, dann kommen Aspekte wie Betriebssicherheit dazu. Also welche LSAs, bzw. welche Garantien geben sich Anwendungen, nicht nur für Schnittstellenkonformität, auf der einen Seite, sondern auch für Uptime, Erreichbarkeit und Geschwindigkeit. Sprich wie viele Requests kann ich machen bevor irgendwelche Lastspitzen erreicht werden. Habe ich die Möglichkeit, mit einem exponential backoff auch Request zurückzunehmen oder zu sagen: “Du darfst jetzt erstmal nicht mehr mit mir reden”, ohne das ganze System auseinander bricht? Das sind Dinge, die ich nicht mehr unter Sicherheit sehe, sondern eher als Betriebssicherheit zähle. Auch stellt sich die Frage ob Services untereinander so abgestimmt, dass eine Team, im Zweifel weiß das nur 1000 Requests pro Sekunde auf ein anderen Service gesendet werden darf und danach vielleicht ein Fehlercode kurz bekommt. Sind diese Überlastungssicherheitsmaßnahmen eingeführt oder nicht?
-
-E: Das Klingt ziemlich komplex.
-
-R: Ja, das ist der Punkt. Mit zunehmenden Anzahl an Applikationen steigt die Komplexität, weil jeder untereinander miteinander redet.
-
-R: Auch muss man sich immer vergewissern, dass trotz einer schnellen Iteration, innerhalb meines Services, mich das nicht entbindet in meinem Ökosystem zu schauen. Wie ist den die Architektur aller Anwendungen? Was heißt das, denn wenn ich jetzt plötzlich die Datenbank  mehr auslasste? Dann habe ich unter Umständen ein Impact auf 20 andere Anwendungen, die ihrerseits wiederum Kollabieren. Ja, ich kann in meinem kleinen Service sicherlich schneller iterieren, ich muss aber dafür eine verantwortliche Person haben, die im Großen auf das Gesamtsystem schaut.
-
-E: Ok, dann würde ich jetzt die letzte Frage stellen. 
-Mit ihrem aktuellen Wissensstand: Welche Softwarearchitektur würden Sie PluraPolit empfehlen?
-
-R: Monolithen
-
-E: Woran machen Sie Ihre Antwort fest?
-
-R: Weil das Team: a) Nicht groß genug ist und b) Weil ich glaube, dass es keine separate Business Domain gibt, wo man sagt: “Die muss zwangsläufig ausgelagert werden”.
-Moment gibt es keine, unabhängigen Teile, die ich sehe, wo es wirtschaftlich Sinn ergibt, sie auszulagern. Microservices oder letztendlich jegliche Software ist ja kein Selbstzweck, sondern dient immer den Ertrag des Unternehmens und solange Microservices nicht den Ertrag steigern, macht es in meinen Augen keinen Sinn.
-
-E: Das waren sehr schöne letzte Worte mit denen ich das Gespräch beende möchte und ich bedanke mich vielmals für die Zeit, die Sie sich genommen haben.
-
-\subsection{Interview mit Alexander Troppman}
-Interviewpartner: Alexander Troppman (A) \\
-Interviewee: Edgar Muss (E) \\
-Datum: 21. Juni 2020 um 19 Uhr \\
-Medium: Zoom
-
-E: Die Aufnahme ist gestartet. Ist es für dich, Alex, okay, dass ich dich aufnehme und dich im Rahmen meiner Bachelorarbeit verwende.
-
-A: Das ist okay.
-
-E: Dann lass uns mit der ersten Frage beginnen.
-
-E: Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor sie ihre Softwarearchitekt zum einer Microservicearchitektur umstellt? 
-
-A: Zuerst denke ich mal, dass sich eine Microservicearchitektur erst lohnt, wenn es die Applikation erfordert. Das sehe jetzt bei PluraPolit Applikation und nichts. Aus meiner Sicht kann man das auch weiter als Monolith belassen.  Also aus Business Sicht fällt mir nur ein,  dass man vielleicht die Verarbeitung der Sound-Dateien in ein Microservice auslagert. Das die vielleicht in verschiedene Formate konvertiert werden. Das wäre ein Anwendungsfall für Microservices. 
-
-A: Monolith sind ja nicht schlecht und solange man nicht, würde ich auch nicht zwangsläufig sagen man muss unbedingt zu einer Microservicearchitektur umstellen.
-
-A: Technische Voraussetzungen, die vorhanden sein müssen, sind: Der Monolith muss in sich schon Umbaufähig sein, sonst endet man in einer neuen Implementierung. Es sollte eine Modulare Struktur schon vorhanden sein, zum Beispiel das verschiedene Entities getrennt verarbeitet werden. So könnte zum Beispiel ein Microservice um die User und ein anderer um  die Kommentare kümmern. Wenn die logischen Schnitte vorhanden sind, kann man aus Gründen, eine Microservicearchitektur umsetzten. 
-
-A: Also wie gesagt ich brauche eine technische Trennung, die schon vorhanden sein muss und ich mussten ein Business Case haben das sich das auch lohnt.
-
-E: Ok bei der technischen Trennung bzw. bei der Trennung allgemein, ist ja nicht immer der fall gegeben, dass schon Trennung vorliegt, sondern dass man sich bewusst dafür entscheidet. Um dies näher zu besprechen würde ich Frage vier vorgreifen.
-
-E: Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommen. Microservices auf der anderen Seite zeichnen dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meine Sie das trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?
-
-E: Schon eine Rückfrage vorgenommen: Wann denkst du, ist der Zeitpunkt für ein Start-up gekommen, um Microservices umzusetzen? Gibt es überhaupt ein Zeitpunkt? 
-
-A: Microservices Ja oder nicht, hat eigentlich nichts mit einem Start-up zu tun.
-
-A: In der Frage ist die Rede, dass ich Microservices feste Schnittstellen und Kontextgrenzen besitzen. Das ist natürlich richtig, aber das zeichnet auch ein guten Monolithen aus. Ich kenne viele Start-ups, die von Anfang Microservices eingesetzt haben, weil gerade Microservices so sind, dass man verschiedene Services austauschen kann. Also gerade im dynamischen Umfeld machen Microservices Sinn.
-
-A: Nur mal ein konkretes Beispiel: Was ich in einem Monolithen nicht machen kann ist mehreren Programmiersprachen verwenden. Dies kann ich aber in einer Microservicearchitektur tun, sodass ich ein Polyglott aufbaue. Das heißt ich kann zehn Entwickler haben, die ich von extern zugekaufte habe und Experten in Java sind, genau so gut einsetzen wie fünf Entwickler, die ich aus einer anderen Firma übernommen habe. Da habe ich Entwickler übernommen, die können kein Java, sie können nur PHP und Symfony und kommen aus dem Frontend.
-
-A: Was ich jetzt machen kann, ist zu sagen, dass sie in ihrer gewohnten PHP Umfeld bleiben können. Das heißt ich habe da die Möglichkeit in dem dynamischen Umfeld verschiedene Entwickler-Ressourcen zu nutzen.
-
-A: Heutzutage ist es ja so, dass man gar nicht so viele Entwickler bekommt, wie man eigentlich bräuchte. So hat man mit Microservices den Vorteil, dass ich eben Teams verwenden kann, welches in ihrer gewohnten Programmiersprachen arbeiten können. Dies ist sehr gut vereinbar mit einer Microservicearchitektur. Schwerer ist es an dieser Stelle mit einem Monolithen. Monolith heißt ja immer es müssen alle Entwickler die gleiche Programmiersprache können, die gleichen Frameworks, den gleichen Coding-Style können und arbeiten auf der gleichen Codebase.
-
-A: Das ist natürlich schwierig, wenn ich viele Entwickler habe, die ein unterschiedlichen Wissensstand haben und sie in kurzer Zeit alle auf eine Linie zu bringen muss.
-
-A: Bei einer Microservicearchitektur habe ich die Möglichkeit zu sagen, dass ihr diesen Service baut. Ich kann sogar in verschiedenen Geschwindigkeiten und Codequalitäten arbeiten.
-
-A: Ich kann zum Beispiel bewusst sagen: “Den einen Service, den Prototypen wir jetzt in der Sprache X und schaffen erst einmal die Basis Funktionalität.” Wir wissen, dass es noch nicht unsere finale System, aber das tauschen wir später einfach mit einer besseren Implementierung aus.
-
-A: Also gerade im dynamischen Umfeld machen Microservices besonders Sinn. Gleichzeitig entsteht dadurch ein Problem. Man holt sich dadurch ein extremen Overhead rein. Den es ist nicht einfach Teams zu synchronisieren. Also ja theoretisch habe ich feste Schnittstellen und Kontextgrenzen. In der Praxis sieht es so aus, dass ein gut Teil der Zeit dafür verwendet wird, dass die Teams sich untereinander abstimmen müssen. Das heißt sie müssen sich absprechen, da sie gemeinsam an einem Feature arbeiten. Projektmanagementmethodiken, wie Scrum und oder andere agile Vorgehensweise supporten solche Vorgehensweisen eigentlich.
-
-A: Jetzt ist hier die Frage: Kann man Microservices in einem dynamischen Umfeld einsetzen?  Ja. Man erreicht eine höhere Flexibilität, was die technische Seite der Entwicklung angeht, aber man hat im auch ein höheren Managementfaktor. Das darf man nicht außer acht lassen.
-
-A: Es ist auch nicht so, dass man durch Microservices schneller implementiert. Die meisten Architekturen die auf Microservices bestehen, sind langsam in der implementierung, da sie eine höhere Komplexität besitzen, die man nicht auf den ersten Blick sieht. Es lohnt sich erst mittel bis langfristig.
-
-E: Okay, aber sollte dann jedes Start-up Microservices in betracht ziehen?
-
-A: Nein, das hängt ganz von dem Business Case ab. Also normalerweise macht man für die Entwicklung der Softwarearchitektur ein Brainstorming, indem man sich überlegt was der Kunde erreichen will. Man identifiziert dabei sogenannte Architektur-Treiber.
-
-A: Architektur-Treiber müssen nicht technisch sein. Das können triviale Dinge sein, wie zum Beispiel: Der Kunde will, dass die Webseite besonders modern aussieht oder es können auch nicht funktionale Antworten sein, wie: Der Kunde will, dass die eingesetzte Technik auf dem neusten Stand ist. Es können auch Softskill Faktoren sein, dass der Kunde will, das Entwickler das Projekt umsetzen, die ein gewisses Denkweise haben, oder eine exotische Programmiersprache verwenden. 
-
-A: Aber meistens hat man Business-Treiber, wie zum Beispiel dass der Prototype in drei Monaten fertig sein muss. Was man anschließend macht, sind alle diese Architektur-Treiber zu bewerten. Denn es kann auch sein, dass manche Treiber wichtiger sind als andere. Wie zum Beispiel, dass ich in drei Monate fertig sein muss. 
-
-In diesem Beispiel wäre meiner Meinung nach, es sinnvoll Microservices einzusetzen. Denn in den drei Monaten kann ich nicht alles zu 100 Prozent umsetzen, kann aber ein Teil zu 30 Prozent entwickeln und andere Abschnitte zu 70 Prozent umsetzen. Ich prototype also ein großen Teil, sodass es funktioniert, um es in der Implementierung durch bessere Microservices auszutauschen. 
-
-A: Insofern denke ich, hilft es an dieser Stelle Microservices einzusetzen.
-
-A: Ich glaube es gibt nicht viele Dinge wo man heutzutage sagt: “Ich brauche Microservices nicht.” Es ist hat die Frage in welcher Komplexität und Ausbaustufe.
-
-E: Okay, weil Sie es grade angebracht haben, dass Teams separat auch in unterschiedlichen Programmiersprachen arbeiten, würde ich gerne zu Frage zwei übergehen.
-
-E: Microservices ermöglicht es Teams unabhängig voneinander an unterschiedlichen Service zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?
-
-A: Also da gibt es mehr Dinge, die man beachten sollte. Microservices kommunizieren untereinander auf eine bestimmte Art. Das heißt, die Teams müsste sich einig sein über welche Schnittstelle die Services kommunizieren. Wird zum Beispiel eine REST-API verwendet, oder ein GraphQL-Schnittstelle?
- 
-A: Oder wird zum Beispiel ein Event getriebene Architektur verwendet? Es kann also sein, dass das solche Entscheidungen auch Aspekte auf der Business Seite beeinflusst. Es gibt zum Beispiel im finanziellen Bereich System, die nachvollziehbar sein müssen. Wenn man zum Beispiel an Banktransaktionen denkt. An dieser Stelle macht ein Events getriebenes System absolut Sinn.
-
-A: Dann gibt es aber auch Fälle da macht es keinen Sinn ein Event basiertes System umzusetzen, da es zu komplex ist. Es muss ja auch noch Testbar sein. Das wird dann sehr schwierig, da Eventbasierte Systeme massiv nebenläufige sind, was das Testen sehr schnell gruselig machen lässt.
-
-A: Man muss sich auf ein Modell einig und das dann beibehalten oder zumindest benötigt man eine Strukturen, sodass man weiß, was wie abläuft. Schnittstellen nach außen müssen geklärt sein. Im Grunde ist es so, dass ein Team eigenständig für sich arbeiten. Das Problem ist halt, dass sie so die restlichen Teams ausblenden. Das sollen das Team einerseits tun, aber andererseits braucht es auch die Kommunikation zwischen den Teams. So sprechen zum Beispiel Abgesandte aus dem Teams alle zwei Wochen miteinander und definieren übergreifende Schnittstellen.
-
-A: Das heißt in größeren Projekten ist es üblich, dass man neben den Teams ein weiteres Team hat, welches quasi übergeordnete Schnittstellen festlegt.
-
-A: Es entsteht also ein Mehraufwand in der Kommunikation und Dokumentation. Demnach wird die Angelegenheit komplexer. Meiner Meinung nach, machen Microservices die Komplexität mehr beherrschbar.
-
-A: So grenzen klaren Strukturen die Verantwortung klar ab und ich kann mit klaren Abläufen Probleme im kleinem Rahmen lösen.
-
-E: Das sind interessante Punkte.
-E: Aus meiner Literaturrecherche habe ich herausgefunden, dass es in erster Line möglich sein muss den Teams das Vertrauen geben zu kann eigenständig an einem Service zu arbeiten. Als wie relevant siehst du diesen Punkt?
-
-A: Vertrauen ist in das in der heutigen Art und Weise, wie man Software entwickelt, immer relevant. Das Schöne an Scrum und den anderen agilen Vorgehensweisen ist, dass der Entwickler wieder als Mensch akzeptiert wird. Wenn ich mich daran erinnere, wie man vor 20 Jahren Software entwickelt hat, dann ist es heute schon ganz anders.
-
-A: Heutzutage hat man verstanden, dass Entwickler Menschen sind und das Softwareentwicklung ein sehr kreativer Prozess ist. Auf der einen Seite ist es so, dass man den  Einzelnen vertrauen muss, aber auch, dass sich das Team untereinander vertraut. Deshalb ist es wichtig, dass eine positive Feedback-Kultur integriert ist, über welche das Team sich kennenlernen kann und sich gegenseitig unterstützt. So lernt der einzelne Entwickler, dass es okay ist, wenn er etwas nicht weiß und kann trotzdem sein Wissen einbringen ohne Angst zu haben.
-
-E: Ok, dass sind alles sehr gut Inhalte. Sie sind vorhin schon einmal auf die technischen Anforderungen eingegangen. Diese würde ich gerne anschließend weiter vertiefen.
-
-E: Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte? 
-
-A: Microservices sind, aus meiner Sicht, eine immer sehr große und komplexe Softwarearchitektur, da sehr viele unterschiedliche Faktoren eine Rolle spielen.
-
-A: Wenn man Microservices umsetzen möchte, sollte man das Wissen über bestimmte Rollen verfügen, damit man so erfolgreich um zusetzen kann. Das andere ist ich muss jemand im DevOps haben. Microservices setzten eine schon sehr technisch komplexe Infrastruktur voraus. Demnach brauche es einen Entwickler, der sich mit dem Aufbau der Infrastruktur auskennen.
-
-A:  Das Dritte ist es braucht ein Systemarchitekten, oder einen der die Rolle übernimmt. Dieser hat die Aufgabe die Einhaltung der Schnittstellen sicherzustellen, sowie mit Weitblick und Voraussicht geplant werden. Diese Person hat den gesamten Überblick hat.
-
- Das sind die drei minimum Rollen, die ich als notwendig erachte das Microservices technisch umgesetzt werden können. 
-
-A: Natürlich kann man die in einer Person abdecken aber auf kurz oder lang sollten es getrennte Personen sein, da die Arbeit zu viel für ein Person allein wird. 
-
-E: Dann kommen wir vielleicht zur fünften Frage.
-E: Mit ihrem aktuellen Wissensstand, welche Software Architekturen empfehlen Sie PluraPolit? 
-
-A: Da würde ich ganz klar dabei Monolithen bleiben.
-
-E: Woran machen Sie Ihre Antwort fest?
-
-A: Ich sehe da vom fachlichen her nichts, was einem Microservicearchitektur rechtfertigt.
-Beziehungsweise Frontend und Backend von einander Trennen, um auch beide Komponenten einfacher auszutauschen und das Backend gegebenenfalls für eine Mobile-App nutzen.
-
-E: Okay, das waren sehr gut Antworten. Da würde ich an dieser Stelle das Interview erst einmal beenden und bedanke mich ganz herzlich für Ihre Zeit.
-
-\subsection{Interview mit Sebastian Schlaak}
-
-Interviewpartner: Sebastian Schlaak (S) \\
-Interviewee: Edgar Muss (E) \\
-Datum: 24. Juni 2020 um 10 Uhr \\
-Medium: Zoom
-
-E: Sebastian, ist es für dich okay, dass ich dich im Rahmen meiner Bachelorarbeit befrage und anschließend die Inhalt in der Arbeit veröffentliche?
-
-S: Ja, das ist für mich in Ordnung.
-
-E: Dann würde ich gerne das interview mit der ersten Frage beginnen. 
-
-E: Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Softwarearchitekt zu einer Microservicearchitektur umstellt?
-
-S: Vielleicht erst einmal meine grundsätzliche Meinung zum Sachverhalt Monolith versus Microservices. Oft wird geraten das Microservices das non plus ultra ist und dass man von vornherein mit Microservices starten sollte. Davon bin ich allerdings nicht der Meinung.
-
-S: Ich denke dass es sinnvoll ist, aus Kosten gründen mit einem Monolith zu starten und erst später, bei Bedarf, einzelne Teile in Microservices auszugliedern. 
-
-S: Ich sag auch ganz bewusst auszugliedern und nicht die ganze Anwendung zu refactoren. Du hast aber konkret nach Bedingungen gefragt. Wo ich bei Käufer Portal angefangen habe, war das ja ein gewaltiges IT Konstrukt. Das heißt es bestand im Großen und Ganzen aus einem Monolithen, wobei einzige Services ausgelagert waren. Das hatte aber mehr damit zu tun, dass man festgestellt hatte, das es bestimmte neue Funktionen gab, die man benötigt hat, die nicht mehr in diesen alten Monolithen reingepasst haben. 
-
-S: Allerdings benötigte es die Daten aus dem Monolithen. Das heißt der Monolith hat eine Datenbank, wo alles abgespeichert wurde: Kundendaten, Unternehmensdaten und etc. Und diese neue Anwendung muss auf diese Daten zurückgreifen. Das war einer der ersten Zeitpunkte, wo man sich über Microservices Gedanken machen musste.
-
-S: Und ich glaube, dass wäre eine Bedingungen, wenn man sagt: “Ok ich habe etwas, was nicht mehr in den Monolithen passt, da es komplett unabhängig ist, bzw. ein ganz anderen Zweck erfüllt und es kaum Überschneidungen gibt. Dann aber trotzdem irgendeine Form von Kommunikation stattfindet, da ja auch Bestandsdaten ausgetauscht werden muss.
-
-S: Einer der ersten Ansätze ist, dass man eine zweite Anwendung erstellt und ein Database-sharing oder was vergleichbares integriert. Das ist aber etwas, was allgemein als Anti-pattern betrachtet wird, da man damit die Kontrolle verliert, was in die Datenbank geschrieben wird.
-
-S: So kann es sein, dass eine Anwendung bestimmte Validierungen hat, die verhindern dass zum Beispiel leere E-Mailadressen gespeichert werden, da die Anwendung davon ausgeht, dass E-Mailadressen immer gesetzt sein muss. Die anderen Anwendung hat aber vielleicht keine Validierung, da es für sie völlig okay ist, dass die leere E-Mailadressen gespeichert werden. Nutzen die Anwendungen nun die selben Daten, dann kann es sein das die ganze Anwendung bringt.
-
-S: Das heißt zu diesem Zeitpunkt macht es durchaus Sinn, dass man darüber nachdenkt, wie eine Microservicearchitektur aussieht. Zum Beispiel ein Service, der die Daten bereitstellt, und zwei Services, die die Daten konsumieren und ihren Teil erfüllen.
-
-S: Das heißt die erste Bedingung ist, dass ich irgendeine Anwendung habe die komplett andere Aufgaben erledigen, als der Monolith.
-
-S: Was natürlich auch immer ein Thema ist, wenn du den Punkt hast, dass du bestimmte Aufgaben auslagern möchte. An zum Beispiel ein externes Entwicklerteam, oder den Zugriff auf den Code beschränken möchtest, machen Microservices Sinn. Aber auch hier hast du den Punkt die Kommunikation genau zu dokumentieren und anzugeben.
-
-S: Das heißt zweite Bedingungen wäre, dass man bestimmten Entwickler keinen Zugriff auf dem Monolith geben möchte, aber trotzdem externe Teams integrieren möchte.
-
-E: Okay, dann würde ich gerne zur zweiten Frage übergehen.
-Microservices ermöglichen es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, das Teams separat voneinander arbeiten können? 
-
-S: Ganz wichtig ist, dass die Schnittstellen der Services entsprechend gut beschrieben sind und dass die Schnittstellen robust sind.
-S: Das heißt, dass die Schnittstellen die eingehenden Daten überprüfen und validieren und bei invaliden Daten ein sinnvollen Fehlercode zurück gibt.
-
-S: Dies ist grade bei externen Teams besonders wichtig, da sie natürlich davon ausgehen, dass  ordentliche Antworten zurück geschickt werden.
-
-S: Das heißt die Beschreibung der Schnittstellen müssen sauber sein, sie müssen gut konzipiert sein, sie müssen sinnvolle Fehlercodes zurückgehen und sie müssen idealerweise auch dokumentiert sein.
-
-E: Dann würde ich zur Frage Drei übergeben. 
-E: Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte? 
-
-S: Ein klassisches Themen ist Skalierung. Ein großer Nachteil von einem Microservicearchitektur im Vergleich zu einem Monolithen, ist dass ein nicht skalierter Microservice die ganze Architektur ausbremsen kann. Anders ist es bei einem Monolithen, da bei diesem alles auf einem Rechner implementiert ist und wenn das ganze System skaliert wird.
-
-E: Ok, also siehst du gewisse Risiko beim Einsatz von Microservices im Vergleich zum Monolithen. 
-
-S: Ja, es sind unterschiedliche Risiken. Beim Monolithen hast du den Nachteil, dass wenn du einen Fehler machst, dann bricht das gesamte System. Bei einer Microservicearchitektur bzw. bei unabhängig Services ist das Risiko geringer. Die Services müssen nur Robust implementiert sein und ggf. vernünftige Fehlermeldung zurück geben und idealerweise auf gecachte Inhalte zurückgreift. Also die Services müssen weitestgehend autark sind.
-
-E: Dann gehen wir zur Frage vier.
-E: Ein Startup zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee gekommen. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meinen Sie das trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?
-
-S: Also ich glaube, dass man mit einem Monolithen am Anfang deutlich schneller ist, das ist einfach so einfach, weil man sich nicht um die Schnittstellen kommen muss. Ich sag auch, es kommt drauf an. Das bezieht sich hauptsächlich auf Schnittstellen, die früher eingesetzt wurden wie REST und JSON beispielsweise. Bei moderneren Technologien wie GraphQL besteht diese Problematik fast kaum noch, weil die Schnittstellen absolut flexibel sind und jederzeit angepasst werden können.
-
-S: Es ist schon so, dass man mit einem Monolithen eine höhere Geschwindigkeit erreichen kann, besonders am Anfang und erst in der späteren Skalierungsphase die Vorteile von Microservices so richtig zum tragen kommen.
-
-E: Okay, aber gibt es da irgendeinen Zeitpunkt, wann sich ein Start-up mit Microservices auseinandersetzen sollte?
-
-S: Das kommt immer darauf an, wie viele Sachen das Unternehmen tut. Wenn du ein Start-up hast, welches nur eine Sache tut und sich auf eine Sache fokussiert, dann reicht wahrscheinlich auch erstmal ein Monolith, aber oft ist das ja nicht der Normalfall. Oft kuckt man ja noch links und rechts nach möglichen andere Funktionen an, die man dem Benutzer zur Verfügung stellen kann, die eigentlich gar nichts mehr mit dem Kerngeschäft zu tun haben und ab diesem Zeitpunkt ist es wahrscheinlich gar mehr so clever, dass sie ein Monolithen noch rein zu packen. 
-
-S: Also es hängt von der Struktur her ab.
-
-E: Okay, also spielst du auf die Komplexität der Geschäftsidee bzw. auf die Komplexität der Geschäftsprozesse an?
-
-S: Ja, eine Klasse bzw. eine Funktion sollte immer nur eine Sache machen und diese ziemlich gute. Dies lässt sich auch auf ein Business übertragen, sodass ein Business auch nur eine Sache machen sollte, aber dieses richtig gut. Ist dies der Fall, dann lässt sich dein Geschäftsprozess wahrscheinlich sehr gut mit einem Monolithen abbilden. Aber in dem Moment, wo du etwas zusätzliches baust, was eigentlich völlig unabhängig ist, beispielsweise wenn du dir ein Management System für Hardware noch dazu baust, dann macht es keinen Sinn das in ein Monolithen zu packen. Es würde wahrscheinlich von vielen so gemacht werden, aber es würde  wahrscheinlich kein Sinn machen. Wenn du dir ein CRM anfängst selber zu bauen, ist es vielleicht auch sinnvoller ein anderen Service zu nutzen.
-
-S: Es läuft darauf hinaus: In dem Moment wo du etwas hast, was nicht mehr so zu sagen, in deine Anwendung wirklich reinpasst, also von den Prozessen. Zu dem Zeitpunkt sollte man entweder ein externen Service nutzt, den man sich eingekauft, oder wenn man halt selber einen implementiert. Zu dem Zeitpunkt muss man den ersten Schritt zu Microservices machen. 
-
-S: Es gibt aber auch hier keine strikte Trennung. Das heißt das der Übergang von einem Monolithen zu einer Microservicearchitektur fließend sein kann, indem der Monolith erste Schnittstellen bereit stellt, die von ausgelagerten Services konsumiert wird.
-
-
-E: Ein sehr guter Einwand.
-E: Dann würde ich jetzt gerne zur letzten Frage gehen.
-E: Mit ihrem aktuellen Wissenstand, welches Softwarearchitektur empfehlen Sie PluraPolit?
-
-S:  Also womit ich sehr gute Erfahrungen gemacht habe, ist tatsächlich eine Architektur, die im Backend schon eine große Anwendung nutzt. Die also nicht nur die Daten bereitstellt, sondern auch so Backoffice Tätigkeit zulässt. Also wie zum Beispiel das Management von irgendwelchen Daten oder so weiter, aber eher für die Schnittstellen, die die Mitarbeiter nutzten und nicht Endkunden.
-
-S: Dieses Backend gibt die Daten dann über eine sehr flexible API heraus. Aktuell bin ich ein riesen Fan von GraphQL. Ich hab es in vier Projekten hintereinander eingesetzt und bin noch nicht an irgendwelche Probleme gestoßen. An ein paar Unschönheiten aber im Vergleich zu REST ist es unfassbar angenehm. 
-
-S: Ja und dann ein modernes JavaScript Framework im Frontend, welches von einer breiten Community unterstützt wird. Da fallen mir nur Vue und React ein. Im Backend, bin ich relativ frei. Das ist natürlich eine reine Geschmackssache. Ich selber baue immer noch gerne Monolithen mit Rails, bin nutze aber auch gerne zwei JavaScript Alternativen. Das eine wäre Node basiert, das andere wäre tatsächlich dann eher eine Serverless-Architektur, wo man dann ein bestehenden Service wie Contentful einsetzt. 
-S: Wenn es möglich ist, würde ich gerade bei kleineren Projekten fast komplett auf das Backend verzichten.
-
-E: Also empfiehlst du eine Trennung zwischen Backend und Frontend?
-
-S: Ja, würde ich machen. Also insbesondere würde ich den Teil trennen, wo die Endkunden die Statements hören und den Teil den ihr sozusagen fürs Backoffice nutzt. Besonders aus Sicherheitsgründen.
-
-E: Woran machen Sie Ihre Antwort fest? 
-
-S: Ein wichtiger Grund sind Security Gründe. Das heißt, wenn du einfach nur eine API zur verfügung stellt, dann musste du nur die APIs einmal sauber durch testen. Dann bestehen eigentlich nur Security Risiken im Frontend.
-
-S: Was auch ganz schön ist, ist das ihr das Backend und Frontend flexiblem austauschen könnt. Zum Beispiel bei einem Projekt, habe ich mit Contentful begonnen und als die Anforderungen an das Backend gestiegen sind, konnte ich es ohne weiteres einfach wechseln.
-
-S: Und das gleiche ist auch fürs Frontend denkbar. Das heißt das wenn man irgendwann sagt Ich habe meinetwegen mit React begonnen, bin aber der Meinung das Vue das geeignetere Framework ist, dann kann ich das halt auch einfach machen.
-
-E: Also die Flexibilität in dem Austauschen vom Backend und dem Frontend.
-
-S: Genau. Wenn wir diese saubere Trennung zwischen Backend und Frontend haben, könnten einfach Frontend Entwickler einsetzen werden, die günstiger sind und ausschließlich Erfahrung im Frontend haben. Das kann somit auch Kostengünstiger für die Entwicklung sein.
-
-E: Das waren sehr schöne Antworten.
-E: Ich bedanke mich sehr für ihre Zeit und würde hiermit erst einmal die Aufnahme und das Interview beenden.
+\input{sections/Anhang/schlaak}
