--- a/sections/Methodik.tex
+++ b/sections/Methodik.tex
@@ -12,3 +12,5 @@ Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedi
 \input{sections/Methodik/durchfuehrung}
 
 \input{sections/Methodik/analyse}
+
+\input{sections/Methodik/ergebnisse}
