--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -33,7 +33,7 @@ Es wurde sich für eine möglichst offene Frage entschieden, um die Relevant die
 
 Anschließend zur Frage zwei wurde Frage drei gestellt:
 
-\textit{Gibt es in ihren Augen irgendwelche technischen Anforderungen die PluraPolit erfüllen sollte? }
+\textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen die PluraPolit erfüllen sollte? }
 
 Diese Frage wurde gestellt, um Bedingung fünf, sechs und sieben zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
 
@@ -47,7 +47,7 @@ Die Frage wurde möglichst offen gestellt, sodass die Experten ihre Erfahrung ei
 
 Frage vier ging der Fragestellung nach, ob Microservices in einem dynamischen Umgeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
 
-\textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sie durch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
+\textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich durch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
 
 Die Zusammenfassung wurde eingefügt, um den Schwerpunkt der Fragestellung auf die Phasen eines Start-up zu lenken.
 Das Ziel dieser Frage war es, den Zeitpunkt, oder das Ereignis zu ermitteln, ab wann ein Start-up Microservices verwenden sollte. Ging der Experte nicht von selbst auf diese Fragestellung ein, wurde im Interview nachgefragt.
