--- a/sections/Theory/bedingungen.tex
+++ b/sections/Theory/bedingungen.tex
@@ -5,28 +5,28 @@ Aus den Erkenntnissen und Kernaussagen der voran gegangenen Abschnitte lassen si
 
 Wie in \cref{sec:conway} beschrieben, hat eine Microservicearchitektur das Ziel, dass Teams möglichst unabhängig voneinander arbeiten können. Erreicht wird dies, indem die Verantwortung eines Service nur einem Team übertragen wird und sich Absprachen zwischen den Teams auf die Festlegung der Schnittstellen begrenzen. Daraus ergeben sich zwei Bedingungen an das Unternehmen:
 \begin{enumerate}
-	\item Die Verantwortung für ein Geschäftsprozess an ein Team zu geben.
+	\item Die Verantwortung für ein Geschäftsprozess muss an ein Team übergeben werden, und
 	\item Die Services greifen ausschließlich auf Ressourcen zu, die über die Schnittstellen erreicht werden können.
 \end{enumerate}
 
 Der Abschnitt über Domain Driven Design zeigt auf, dass Microservices die Komplexität eines Unternehmens reduziert, indem die Geschäftsprozesse in Services geteilt werden. Dieser Ansatz der Trennung der Geschäftsdomainen fördert die Fähigkeit, dass Services unabhängig voneinander wachsen können und gleichzeitig eine klare Verantwortung haben.
 
-Es ergeben sich die Bedingungen zum Vorliegen eines Systems:
+Es ergeben sich die Bedingungen zum Vorliegen eines Systems, welches:
 \begin{enumerate}
-	\item welches einerseits eine gewisse Komplexität aufweist und
+	\item einerseits eine gewisse Komplexität aufweist und
 	\item andererseits Geschäftsabläufe besitzt, die sich trennen lassen.
 \end{enumerate}
 
 Neben der Einteilung in einzelne Komponenten werden auch Bedingungen an das Netzwerk gestellt, wie in \cref{sec:kommunikation} ausgeführt. So ergeben sich folgende Anforderungen:
 \begin{enumerate}
-	\item Kommunikation der Services untereinander.
-	\item Verhinderung von unbefugten Zugriffen.
-	\item Vorliegen einer möglichst hohen Datengeschwindigkeit.
+	\item Kommunikation der Services untereinander
+	\item Verhinderung von unbefugten Zugriffen
+	\item Vorliegen einer möglichst hohen Datengeschwindigkeit
 \end{enumerate}
 
-Wie in \cref{sec:kommunikation} vorausgesetzt, weisen die Services Programmierschnittstellen auf, die Server zu Server Kommunikation erlauben.
+Wie in \cref{sec:kommunikation} vorausgesetzt, weisen die Services Programmierschnittstellen auf, die Server-zu-Server-Kommunikation erlauben.
 
-Bei der Beschreibung der Situation eines Start-ups in \cref{sec:start-up} wurde deutlich, dass es in einem noch nichtexistierenden Markt operiert und dadurch besonders dynamisch agieren muss. Daraus ergibt sich die Anforderung, dass erst eine Microservicearchitektur umgesetzt werden kann, wenn ein Produkt-Market Fit vorliegt.
+Bei der Beschreibung der Situation eines Start-ups in \cref{sec:start-up} wurde deutlich, dass es in einem noch nicht existierenden Markt operiert und dadurch besonders dynamisch agieren muss. Daraus ergibt sich die Anforderung, dass erst eine Microservicearchitektur umgesetzt werden kann, wenn ein Produkt-Market Fit vorliegt.
 
 Aus der Literaturrecherche ergeben sich zusammenfassend neun Bedingungen:
 \begin{enumerate}
