--- a/sections/Methodik/interviewfragen.tex
+++ b/sections/Methodik/interviewfragen.tex
@@ -1,5 +1,5 @@
 \subsection{Erstellung der Interviewfragen}
 
-Die Fragen für die Interviews wurden aus den Ergebnissen der Literaturrecherche erstellt. So begann die Bachelor Thesis mit der Durchführung einer Literaturrecherche, in welcher Microservices, sowie Softwarearchitektur definiert und beschrieben wurden. Nachfolgend wurden, die zur Erstellung und Einteilung von Microservices notwendigen, Faktoren benannt und beschrieben.  Die wichtigsten Inhalte wurden anschließend in Abschnitt … zu neun Bedingungen zusammengetragen und als Grundlage für die Fragestellung verwendet.
+Die Fragen für die Interviews wurden aus den Ergebnissen der Literaturrecherche erstellt. So begann die Bachelor Thesis mit der Durchführung einer Literaturrecherche, in welcher Microservices und Softwarearchitektur definiert und beschrieben wurden. Nachfolgend wurden die zur Erstellung und Einteilung von Microservices notwendigen Faktoren benannt und beschrieben.  Die wichtigsten Inhalte wurden anschließend in \cref{sec:bedingungen} zu neun Bedingungen zusammengetragen und als Grundlage für die Fragestellung verwendet.
 
-Dabei zielen die Fragen zum einen darauf ab, die einzelnen Annahmen zu validieren und zum anderen den Experten die Möglichkeit zu geben ihre Expertise einzubringen. Um dem gerecht zu werden, wurden vor allem offene Fragen gewählt. Nichtsdestoweniger orientierten sich die Fragestellungen an den in Abschnitt … definierten Bedingungen, sodass die Antworten aus den Interviews mit den Erkenntnissen aus der Literaturrecherche vergleichbar sind.
+Dabei zielen die Fragen zum einen darauf ab, die einzelnen Annahmen zu validieren und zum anderen den Experten die Möglichkeit zu geben ihre Expertise einzubringen. Um dem gerecht zu werden, wurden vor allem offene Fragen gewählt. Gleichwohl orientierten sich die Fragestellungen an den in \cref{sec:bedingungen} definierten Bedingungen, sodass die Antworten aus den Interviews mit den Erkenntnissen aus der Literaturrecherche vergleichbar sind.
